# dotman

./: Cargo.toml
src/: command.rs  lib.rs  main.rs
