[package]
name = "dotman"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true # Elimina automáticamente los símbolos del binario
opt-level = "s" # Optimizar para el tamaño
lto = true # Habilitar la optimización del tiempo de enlace
codegen-units = 1 # Maximice las optimizaciones de reducción de tamaño

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
